
syntax = "proto3";

option go_package          = "test/message";

package message;

// 订单请求参数
message OrderRequest {
  string orderId = 1;
  int64 timeStamp = 2;
}

// 订单信息
message OrderInfo {
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;
}

// 订单服务service定义
service OrderService{
  rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
  rpc GetOrderInfos (OrderRequest) returns (stream OrderInfo) {}; // 服务端流模式
}

// protoc --go_out=. *.proto

// protoc --go_out=plugins=grpc:. *.proto
